--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -21,11 +21,66 @@
     "\n",
     "Interpret models, study individual predictions, and present your findings.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! pip install numpy pandas-profiling matplotlib plotly seaborn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! pip install opendatasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "# import jovian\n",
+    "import matplotlib\n",
+    "# import opendatasets as od\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import plotly.express as px\n",
+    "%matplotlib inline\n",
+    "\n",
+    "sns.set_style('darkgrid')\n",
+    "matplotlib.rcParams['font.size'] = 14\n",
+    "matplotlib.rcParams['figure.figsize'] = (10, 6)\n",
+    "matplotlib.rcParams['figure.facecolor'] = '#00000000'"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
